Add required HTML comment

--- a/letter.html
+++ b/letter.html
@@ -19,6 +19,12 @@
   </style>
 </head>
 <body>
+<!--  
+  Name: Jaden King Doyles
+  File: letter.html  
+  Date: 18 September 2025  
+  Challenge: Marking up a letter
+-->
 Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
