--- a/letter.html
+++ b/letter.html
@@ -46,15 +46,16 @@
     UK
   </address>
 
+  <h1>Re: Eileen Dover university application</h1>
 
-Re: Eileen Dover university application
+  <p>Dear Eileen,</p>
 
-Dear Eileen,
-
-Thank you for your recent application to join us at the University of
-Awesome's science faculty to study as part of your
-PhD (Doctor of Philosophy) next year. I will answer your
-questions one by one, in the following sections.
+  <p>
+    Thank you for your recent application to join us at the University of
+    Awesome's science faculty to study as part of your
+    <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your
+    questions one by one, in the following sections.
+  </p>
 
 Starting dates
 
