Add sign off formatting

--- a/letter.html
+++ b/letter.html
@@ -149,11 +149,16 @@
     </dd>
   </dl>
 
-Yours sincerely,
+  <p>Yours sincerely,</p>
 
-Dr Eleanor Gaye
+  <p><strong>Dr Eleanor Gaye</strong></p>
 
-University of Awesome motto: Be awesome to each other. --
-The memoirs of Bill S Preston, Esq.
+  <p>
+    University of Awesome motto: <q>Be awesome to each other.</q> —
+    <cite
+      >The memoirs of Bill S Preston,
+      <abbr title="Esquire">Esq.</abbr></cite
+    >
+  </p>
 </body>
 </html>
