Add required HTML comment

--- a/structuring-html-challenge/index.html
+++ b/structuring-html-challenge/index.html
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+<!-- 
+Name: Jaden King-Doyles
+File: index.html
+Date: 18 September 2025
+Challenge: Structuring a page of content
+-->
     <h1>Birdwatching</h1>
 
     Home Get started Photos Gear Forum
