--- a/structuring-html-challenge/index.html
+++ b/structuring-html-challenge/index.html
@@ -6,6 +6,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700"
       rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -15,9 +16,21 @@ File: index.html
 Date: 18 September 2025
 Challenge: Structuring a page of content
 -->
-    <h1>Birdwatching</h1>
-
-    Home Get started Photos Gear Forum
+    <header>
+      <h1>
+        <img src="dove.png" alt="" />
+        Birdwatching
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Get started</a></li>
+          <li><a href="#">Photos</a></li>
+          <li><a href="#">Gear</a></li>
+          <li><a href="#">Forum</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <h2>Welcome</h2>
 
