--- a/structuring-html-challenge/index.html
+++ b/structuring-html-challenge/index.html
@@ -18,7 +18,7 @@ Challenge: Structuring a page of content
 -->
     <header>
       <h1>
-        <img src="dove.png" alt="" />
+        <img src="https://mdn.github.io/shared-assets/images/examples/learn/birds/dove.png" alt="" />
         Birdwatching
       </h1>
       <nav>
@@ -32,24 +32,37 @@ Challenge: Structuring a page of content
       </nav>
     </header>
 
-    <h2>Welcome</h2>
+<main>
+  <article>
+    <section>
+      <h2>Welcome</h2>
+      <p>
+        Welcome to our fake birdwatching site. If this were a real site, it
+        would be the ideal place to come to learn more about birdwatching...
+      </p>
+      <p>
+        So don't waste time! Get what you need, then turn off that computer
+        and get out into the great outdoors!
+      </p>
+    </section>
+  </article>
 
-    <p>
-      Welcome to our fake birdwatching site. If this were a real site, it
-      would be the ideal place to come to learn more about birdwatching,
-      whether you are a beginner looking to learn how to get into birding, or
-      an expert wanting to share ideas, tips, and photos with other
-      like-minded people.
-    </p>
-
-    <p>
-      So don't waste time! Get what you need, then turn off that computer and
-      get out into the great outdoors!
-    </p>
-
+  <aside>
     <h2>Favorite photos</h2>
-
-    <!-- Link images here. -->
+    <a href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-1.jpg">
+      <img src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-1_th.jpg" alt="Favorite bird 1" />
+    </a>
+    <a href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-2.jpg">
+      <img src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-2_th.jpg" alt="Favorite bird 2" />
+    </a>
+    <a href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-3.jpg">
+      <img src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-3_th.jpg" alt="Favorite bird 3" />
+    </a>
+    <a href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-4.jpg">
+      <img src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-4_th.jpg" alt="Favorite bird 4" />
+    </a>
+  </aside>
+</main>
 
     <p>
       This fake website example is CC0 — any part of this code may be reused
