--- a/structuring-html-challenge/index.html
+++ b/structuring-html-challenge/index.html
@@ -35,15 +35,13 @@ Challenge: Structuring a page of content
 <main>
   <article>
     <section>
-      <h2>Welcome</h2>
-      <p>
-        Welcome to our fake birdwatching site. If this were a real site, it
-        would be the ideal place to come to learn more about birdwatching...
-      </p>
-      <p>
-        So don't waste time! Get what you need, then turn off that computer
-        and get out into the great outdoors!
-      </p>
+<h2>Welcome</h2>
+<p>
+  Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.
+</p>
+<p>
+  So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!
+</p>
     </section>
   </article>
 
@@ -64,14 +62,14 @@ Challenge: Structuring a page of content
   </aside>
 </main>
 
-    <p>
-      This fake website example is CC0 — any part of this code may be reused
-      in any way you wish. Original example written by Chris Mills, 2016.
-    </p>
-
-    <p>
-      <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a>
-      by Lorc.
-    </p>
+<footer>
+  <p>
+    This fake website example is CC0 — any part of this code may be reused
+    in any way you wish. Original example written by Chris Mills, 2016.
+  </p>
+  <p>
+    <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.
+  </p>
+</footer>
   </body>
 </html>
