Add HTML comment

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -6,6 +6,12 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+<!-- 
+Name: Jaden King-Doyles
+File: index.html
+Date: 01 October 2025
+Challenge: Adding some images and a video to a splash page
+-->
     <header>
       <nav>
         <ul>
