--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -25,7 +25,9 @@ Challenge: Adding some images and a video to a splash page
       </nav>
       <section>
         <h1>Creepy-crawlies splash page!</h1>
-
+        <video autoplay muted loop preload="auto">
+            <source src="https://mdn.github.io/shared-assets/videos/learn/bug_video_640.mp4" type="video/mp4">
+        </video>
         <p>
           In casual language, people use “bugs” to mean all sorts of small
           creepy-crawlies: insects, spiders, etc. However, “Bugs” (true bugs)
