--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -40,7 +40,10 @@ Challenge: Adding some images and a video to a splash page
     <main>
       <section id="beetles">
         <h2>Beetles (Coleoptera)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/beetle.png" alt="Beetle with a tough shell and hidden wings" width="250" height="180">
+            <figcaption>Beetles are built like tiny tanks.</figcaption>
+        </figure>
         <p>
           Beetles make up the largest order of insects, with more than
           350,000 known species. They are recognized by their hardened
