Add true bugs image

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -72,7 +72,10 @@ Challenge: Adding some images and a video to a splash page
       </section>
       <section id="true_bugs">
         <h2>True Bugs (Hemiptera)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/true_bug.jpg" alt="Bug with a long mouthpart for sipping sap" width="250" height="180">
+            <figcaption>True bugs are sap-sipping specialists.</figcaption>
+        </figure>
         <p>
           True bugs include a wide range of insects such as stink bugs,
           cicadas, aphids, and water striders. Unlike beetles, their
