Add butterfly image

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -115,7 +115,10 @@ Challenge: Adding some images and a video to a splash page
       </section>
       <section id="butterflies_moths">
         <h2>Butterflies & Moths (Lepidoptera)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/butterfly.jpg" alt="Butterfly with colorful patterned wings" width="250" height="180">
+            <figcaption>Butterflies start out as hungry caterpillars.</figcaption>
+        </figure>
         <p>
           Butterflies and moths are some of the most recognizable insects
           thanks to their large, often colorful wings covered in tiny scales.
