Add mosquito image

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -148,7 +148,10 @@ Challenge: Adding some images and a video to a splash page
       </section>
       <section id="flies_mosquitos">
         <h2>Flies & Mosquitoes (Diptera)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/mosquito.jpg" alt="Mosquito with a needle-like mouth" width="250" height="180">
+            <figcaption>Mosquitoes are day-time vampires.</figcaption>
+        </figure>
         <p>
           Flies and mosquitoes belong to the order Diptera, meaning “two
           wings.” Unlike most other insects, they have only one functional
