--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -187,7 +187,10 @@ Challenge: Adding some images and a video to a splash page
       </section>
       <section id="bees_wasps_ants">
         <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/bee.jpg" alt="Bee posing for a photo" width="250" height="180">
+            <figcaption>Bees and ants are nature's busy workers.</figcaption>
+        </figure>
         <p>
           Bees, wasps, and ants are a diverse group known for their complex
           behaviors and social structures. Many species live in colonies with
