Add spider image

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -220,7 +220,10 @@ Challenge: Adding some images and a video to a splash page
       </section>
       <section id="spiders">
         <h2>Spiders (Araneae)</h2>
-
+        <figure>
+            <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/spider.jpg" alt="Spider with long legs and hairy back" width="250" height="180">
+            <figcaption>Spiders are stealthy.</figcaption>
+        </figure>
         <p>
           Spiders are arachnids, not insects, and are easily distinguished by
           their eight legs and lack of antennae. Almost all spiders are
