--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -15,12 +15,12 @@ Challenge: Adding some images and a video to a splash page
     <header>
       <nav>
         <ul>
-          <li><a href="#beetles">Beetles</a></li>
-          <li><a href="#true_bugs">True bugs</a></li>
-          <li><a href="#butterflies_moths">Butterflies and moths</a></li>
-          <li><a href="#flies_mosquitos">Flies and mosquitos</a></li>
-          <li><a href="#bees_wasps_ants">Bees, wasps, and ants</a></li>
-          <li><a href="#spiders">Spiders</a></li>
+          <li>🐞<a href="#beetles">Beetles</a></li>
+          <li>🪲<a href="#true_bugs">True bugs</a></li>
+          <li>🦋<a href="#butterflies_moths">Butterflies and moths</a></li>
+          <li>🦟<a href="#flies_mosquitos">Flies and mosquitos</a></li>
+          <li>🐝<a href="#bees_wasps_ants">Bees, wasps, and ants</a></li>
+          <li>🕷️<a href="#spiders">Spiders</a></li>
         </ul>
       </nav>
       <section>
