Add emojis for headings

--- a/splash-page-challenge/index.html
+++ b/splash-page-challenge/index.html
@@ -39,7 +39,7 @@ Challenge: Adding some images and a video to a splash page
     </header>
     <main>
       <section id="beetles">
-        <h2>Beetles (Coleoptera)</h2>
+        <h2>🐞Beetles (Coleoptera)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/beetle.png" alt="Beetle with a tough shell and hidden wings" width="250" height="180">
             <figcaption>Beetles are built like tiny tanks.</figcaption>
@@ -71,7 +71,7 @@ Challenge: Adding some images and a video to a splash page
         </p>
       </section>
       <section id="true_bugs">
-        <h2>True Bugs (Hemiptera)</h2>
+        <h2>🪲True Bugs (Hemiptera)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/true_bug.jpg" alt="Bug with a long mouthpart for sipping sap" width="250" height="180">
             <figcaption>True bugs are sap-sipping specialists.</figcaption>
@@ -114,7 +114,7 @@ Challenge: Adding some images and a video to a splash page
         </p>
       </section>
       <section id="butterflies_moths">
-        <h2>Butterflies & Moths (Lepidoptera)</h2>
+        <h2>🦋Butterflies & Moths (Lepidoptera)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/butterfly.jpg" alt="Butterfly with colorful patterned wings" width="250" height="180">
             <figcaption>Butterflies start out as hungry caterpillars.</figcaption>
@@ -147,7 +147,7 @@ Challenge: Adding some images and a video to a splash page
         </p>
       </section>
       <section id="flies_mosquitos">
-        <h2>Flies & Mosquitoes (Diptera)</h2>
+        <h2>🦟Flies & Mosquitoes (Diptera)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/mosquito.jpg" alt="Mosquito with a needle-like mouth" width="250" height="180">
             <figcaption>Mosquitoes are day-time vampires.</figcaption>
@@ -186,7 +186,7 @@ Challenge: Adding some images and a video to a splash page
         </p>
       </section>
       <section id="bees_wasps_ants">
-        <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
+        <h2>🐝Bees, Wasps, Ants (Hymenoptera)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/bee.jpg" alt="Bee posing for a photo" width="250" height="180">
             <figcaption>Bees and ants are nature's busy workers.</figcaption>
@@ -219,7 +219,7 @@ Challenge: Adding some images and a video to a splash page
         </p>
       </section>
       <section id="spiders">
-        <h2>Spiders (Araneae)</h2>
+        <h2>🕷️Spiders (Araneae)</h2>
         <figure>
             <img src="https://mdn.github.io/shared-assets/images/examples/learn/crawlies/spider.jpg" alt="Spider with long legs and hairy back" width="250" height="180">
             <figcaption>Spiders are stealthy.</figcaption>
