Add HTML comment

--- a/structuring-planet-table-challeneg/blank-template.html
+++ b/structuring-planet-table-challeneg/blank-template.html
@@ -7,6 +7,12 @@
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+<!-- 
+Name: Jaden King-Doyles
+File: blank-template.html
+Date: 02 October 2025
+Challenge: Structuring a data table
+-->
     <h1>Table template</h1>
 
 
