Add table header and body

--- a/structuring-planet-table-challeneg/blank-template.html
+++ b/structuring-planet-table-challeneg/blank-template.html
@@ -14,7 +14,11 @@ Date: 02 October 2025
 Challenge: Structuring a data table
 -->
     <h1>Table template</h1>
-
-
+    <table>
+        <thead>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
   </body>
 </html>
