--- a/biography-page-challenge/index.html
+++ b/biography-page-challenge/index.html
@@ -1,20 +1,35 @@
-<h1>Jane Doe</h1>
-<div class="job-title">Web Developer</div>
-<p>
-  Far far away, behind the word mountains, far from the countries Vokalia and
-  Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-  right at the coast of the Semantics, a large language ocean.
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Jane Doe Bio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- 
+    Name: Jaden King-Doyles
+    File: index.html
+    Date: 16 October 2025
+    Challenge: Adding CSS to a biography page
+    -->
+    <h1>Jane Doe</h1>
+    <div class="job-title">Web Developer</div>
 
-<p>
-  A small river named Duden flows by their place and supplies it with the
-  necessary regelialia. It is a paradisematic country, in which roasted parts of
-  sentences fly into your mouth.
-</p>
+    <p>
+      Far far away, behind the word mountains, far from the countries Vokalia and
+      Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+      right at the coast of the Semantics, a large language ocean.
+    </p>
 
-<h2>Contact information</h2>
-<ul>
-  <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
-  <li>Web: <a href="http://example.com">http://example.com</a></li>
-  <li>Tel: <a href="tel:12345678">123 45678</a></li>
-</ul>
+    <p>
+      A small river named Duden flows by their place and supplies it with the
+      necessary regelialia. It is a paradisematic country, in which roasted parts of
+      sentences fly into your mouth.
+    </p>
+
+    <h2>Contact information</h2>
+    <ul>
+      <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
+    </ul>
+  </body>
+</html>
