--- a/biography-page-challenge/index.html
+++ b/biography-page-challenge/index.html
@@ -30,6 +30,8 @@
     <h2>Contact information</h2>
     <ul>
       <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
+      <li>Web: <a href="http://example.com">http://example.com</a></li>
+      <li>Tel: <a href="tel:12345678">123 45678</a></li>
     </ul>
   </body>
 </html>
