Add HTML comment header

--- a/typesetting-homepage-challenge/index.html
+++ b/typesetting-homepage-challenge/index.html
@@ -7,6 +7,12 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+    <!-- 
+    Name: Jaden King-Doyles
+    File: index.html
+    Date: 16 October 2025
+    Challenge: Typesetting a community school homepage
+    -->
     <header>
       <h1>St Huxley's Community College</h1>
     </header>
