--- a/typesetting-homepage-challenge/index.html
+++ b/typesetting-homepage-challenge/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>St Huxley's Community College</title>
     <link href="style.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <!-- 
