Add HTML comment

--- a/layout-challenge/index.html
+++ b/layout-challenge/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <!-- 
+    Name: Jaden King-Doyles
+    File: index.html
+    Date: 01 October 2025
+    Challenge: Develop a webpage layout
+    -->
     <div class="logo">My exciting website!</div>
 
     <nav>
