--- a/silly-story-generator/index.html
+++ b/silly-story-generator/index.html
@@ -1,3 +1,17 @@
+<!-- 
+Name: Jaden King-Doyles
+File: index.html 
+Date: 28 November 2025 
+Challenge: Create a silly story generator 
+-->
+
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>Silly Story Generator</title>
+  </head>
+
 <div>
   <label for="custom-name">Enter custom name:</label>
   <input id="custom-name" type="text" placeholder="" />
