--- a/silly-story-generator/index.html
+++ b/silly-story-generator/index.html
@@ -11,7 +11,7 @@ Challenge: Create a silly story generator
     <meta charset="utf-8">
     <title>Silly Story Generator</title>
   </head>
-
+<body>
 <div>
   <label for="custom-name">Enter custom name:</label>
   <input id="custom-name" type="text" placeholder="" />
@@ -28,3 +28,5 @@ Challenge: Create a silly story generator
 </div>
 <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
 <p class="story"></p>
+<script src="script.js"></script>
+</body>
