add comment and validation

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -1,3 +1,17 @@
+<!-- 
+Name: Jaden 
+File: index.html 
+Date: 29 November 2025 
+Challenge: Makig an image gallery
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Image gallery example</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
 <h1>Image gallery example</h1>
 
 <div class="full-img">
