Add images to thumbnail, body and script tag

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -8,6 +8,7 @@ Challenge: Makig an image gallery
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<body>
 <title>Image gallery example</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -23,4 +24,6 @@ Challenge: Makig an image gallery
   <button class="dark">Darken</button>
 </div>
 
-<div class="thumb-bar"></div>
+<div class="thumb-bar"></div>  
+<script src="script.js"></script>
+</body>
