--- a/bouncing-ball-demo-features/index-finished.html
+++ b/bouncing-ball-demo-features/index-finished.html
@@ -6,7 +6,12 @@
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
+<!-- 
+Name: Jaden King-Doyles
+File: index.html 
+Date: 30 November 2025 
+Challenge: Add features to bouncing ball demo 
+-->
   <body>
     <h1>bouncing balls</h1>
     <canvas></canvas>
