--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -23,7 +23,7 @@
       <font size="7">Welcome to our wildlife website</font>
     </div>
 
-    <div class="nav">
+    <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
@@ -35,7 +35,7 @@
         <input type="search" name="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
-    </div>
+    </nav>
 
     <main>
       <article>
