change audio tag

--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -106,12 +106,19 @@
         <br><br>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
         <br><br>
-        <audio controls>
+        <audio controls aria-describedby="audio-desc">
           <source src="media/bear.mp3" type="audio/mp3">
           <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
+          <p>If the audio doesn't play, download the 
+            <a href="media/bear.mp3">MP3</a> or 
+            <a href="media/bear.ogg">OGG</a>.
+          </p>
         </audio>
 
+        <p id="audio-desc">
+          Transcript: This fact file explains typical bear mating rituals, including seasonal behaviour, sample calls, 
+          and quotes from wildlife experts.
+        </p>
         <aside>
 
         <h3>About the author</h3>
