--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -33,11 +33,11 @@
         <li><a href="#">Blog</a></li>
       </ul>
 
-      <form class="search">
-        <input type="search" name="q" placeholder="Search query">
+      <form class="search" role="search">
+        <label class="sr-only" for="q">Search</label>
+        <input type="search" id="q" name="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
-    </nav>
 
     <main>
       <article>
@@ -137,15 +137,12 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
+                <label for="name">Your name:</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
               <div class="flex-pair">
-                Your comment:
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
-              </div>
-              <div>
-                <input type="submit" value="Submit comment">
               </div>
             </form>
 
