--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -12,6 +12,12 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+<!-- 
+Name: Jaden King-Doyles
+File: index.html
+Date: 11 December 2025
+Challenge: Accessibility troubleshooting
+-->
 
   <body>
     <div class="header">
