--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -23,8 +23,7 @@ Challenge: Accessibility troubleshooting
     <div class="header">
       <font size="7">Welcome to our wildlife website</font>
     </div>
-
-    <div class="nav">
+    <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
@@ -33,10 +32,11 @@ Challenge: Accessibility troubleshooting
       </ul>
 
       <form class="search">
-        <input type="search" name="q" placeholder="Search query">
+        <label class="sr-only" for="search">Search query:</label>
+        <input type="search" id="search" name="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
-    </div>
+    </nav>
 
     <main>
       <article>
