--- a/assessment-files/index.html
+++ b/assessment-files/index.html
@@ -52,12 +52,12 @@ Challenge: Accessibility troubleshooting
         <table>
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope="col">Bear Type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
           <tbody>
@@ -106,7 +106,7 @@ Challenge: Accessibility troubleshooting
 
         </aside>
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <div class="show-hide" aria-expanded="false" >Show comments</div>
 
           <div class="comment-wrapper">
 
